Exercicios estrutura de repetição - Professor Gustavo Guanabara

--- a/VISUALG.INI
+++ b/VISUALG.INI
@@ -1,6 +1,6 @@
 [Files]
-MRUFile1=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\MediaEscolar.alg
-MRUFile2=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\ValidarIdadeCNH.alg
-MRUFile3=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\CalculoImc.alg
-MRUFile4=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\CondicionalComposta.alg
-MRUFile5=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\CondicionalSimples.alg
+MRUFile1=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\MelhorAluno.alg
+MRUFile2=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\contadorInteligente.alg
+MRUFile3=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\conversorMoedas3.alg
+MRUFile4=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\conversorMoedas2.alg
+MRUFile5=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\SomaNumerosMaiorValor.alg
