--- a/VISUALG.INI
+++ b/VISUALG.INI
@@ -1,6 +1,6 @@
 [Files]
-MRUFile1=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\NumerosPrimos.alg
-MRUFile2=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\FatorialNumero2.alg
-MRUFile3=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\FatorialNumero.alg
-MRUFile4=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\NumerosNegativos.alg
-MRUFile5=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\TabuadaEscolhaUsuario.alg
+MRUFile1=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\SeletorPessoas.alg
+MRUFile2=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\SuperContador.alg
+MRUFile3=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\NumerosPrimos.alg
+MRUFile4=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\FatorialNumero2.alg
+MRUFile5=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\FatorialNumero.alg
