Atualizando com exercicios de estrutura de repetição aula 3

--- a/VISUALG.INI
+++ b/VISUALG.INI
@@ -1,6 +1,6 @@
 [Files]
-MRUFile1=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\SeletorPessoas.alg
-MRUFile2=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\SuperContador.alg
-MRUFile3=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\NumerosPrimos.alg
-MRUFile4=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\FatorialNumero2.alg
-MRUFile5=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\FatorialNumero.alg
+MRUFile1=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\AnalizadorNumeros.alg
+MRUFile2=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\SerieFibonacci.alg
+MRUFile3=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\Combinacoes.alg
+MRUFile4=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\ValoresEntre0e10Parte2.alg
+MRUFile5=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\ValoresEntre0e10.alg
