Exercicios resolvidos da aula 13 -> Funções

--- a/VISUALG.INI
+++ b/VISUALG.INI
@@ -1,6 +1,6 @@
 [Files]
-MRUFile1=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\FIbonacciProcedimento.alg
-MRUFile2=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\SomaPorReferencia.alg
-MRUFile3=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\ParOuImparProcedimento.alg
-MRUFile4=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\ProcedimentoRealizaSoma.alg
-MRUFile5=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\DectetorMaiorPesoProcedimento.alg
+MRUFile1=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\FuncaoSomarValores.alg
+MRUFile2=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\FIbonacciProcedimento.alg
+MRUFile3=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\SomaPorReferencia.alg
+MRUFile4=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\ParOuImparProcedimento.alg
+MRUFile5=C:\Users\Pitiquinho\OneDrive\Área de Trabalho\CURSOS RODRIGO\Cursos em video\Curso de algoritmo básico\ProcedimentoRealizaSoma.alg
